Add Realm dependency via Carthage.

--- a/.gitignore
+++ b/.gitignore
@@ -49,3 +49,6 @@ fastlane/report.xml
 fastlane/Preview.html
 fastlane/screenshots
 fastlane/test_output
+
+## Firebase plist
+GoogleService-Info.plist
